adding dashboard, fixing api call